--- a/people.html
+++ b/people.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About</title>
+<title>People</title>
 
 <script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -262,15 +262,24 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">People</h1>
 
 </div>
 
 
-<p>The Communication and Emerging Media Lab (CEM Lab) is a collaborative research group that investigates the relationship between emerging communication technologies and politics broadly construed. Based in the Department of Communication at the University at Buffalo, the CEM Lab is committed to facilitating faculty-student collaborative research.</p>
-<p>With emerging communication technologies intertwined with almost every aspect of social life, particularly our political life, we are interested in understanding how they shape the lived experiences of the 21st-century citizens. Particularly, we study how people use digital media to consume news and political information, learn about politics, discuss and share political content with others, and engage in the political process. Here, we see politics as relevant to almost all facets of our public and private lives, from voting, civic participation, to what we purchase and what lifestyle we adopt.</p>
-<p>Our methodical approach combines computational methods like NLP and network analysis with quantitative methodologies such as surveys and experiments. We believe that this mixed-method approach can help us better understand the psychological mechanisms and behavioral patterns of people’s use of emerging communication technologies and its political and social implications.</p>
-<p>The CEM Lab is dedicated to providing an open, diverse, inclusive, and collaborative space for students interested in political communication to develop their research skills. Through close faculty mentoring and weekly meetings, students are involved in all phases of the research process including idea generation, research design, data collection, analyses, and writing. We hope such hands-on research experience will prepare graduate students later conduct independent research as faculty. For undergraduate students interested in research, this lab provides an opportunity to work directly with faculty and graduate students on research projects outside of the classroom.</p>
+<div id="nojin-kwak-co-director" class="section level2">
+<h2>Nojin Kwak (co-director)</h2>
+<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo. In addition to his appointment in Communication Studies, he currently serves as vice provost for international education. Kwak’s research centers on the role of communication media in civic and political engagement and has published in peer-reviewed journals, including <em>Communication Research, Journal of Communication</em>, <em>Human Communication Research</em>, <em>Political Communication</em>, <em>Political Research Quarterly</em>, <em>New Media and Society</em>, and <em>Asian Journal of Communication</em>. His recent studies analyze the impact of internet and mobile communication technologies on community involvement, deliberative openness, and political participation. He has received numerous top paper awards at major conferences. Kwak is a co-editor of a book series, Perspectives on Contemporary Korea, published by the University of Michigan Press.</p>
+<p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
+</div>
+<div id="yini-zhang-co-director" class="section level2">
+<h2>Yini Zhang (co-director)</h2>
+<p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant professor in the Department of Communication at the University at Buffalo. She applies computational methods to the study of networked actors on social media, information flows across traditional and social media, and their implications for journalism and democracy. Her work has been published in journals such as <em>Journal of Communication</em>, <em>Journal of Computer-Mediated Communication</em>, and <em>New Media &amp; Society</em>.</p>
+<p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
+</div>
+<div id="new-members" class="section level2">
+<h2>New Members</h2>
+</div>
 
 
 
