--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -267,14 +267,20 @@ $(document).ready(function () {
 </div>
 
 
-<div id="project-1" class="section level2">
-<h2>Project #1</h2>
+<div id="project-1-crossplatform-information-flow" class="section level2">
+<h2>Project #1 Crossplatform information flow</h2>
+<p><img src="files/Multi-platform.jpeg" style="width:100%; height: 10%"></p>
+<p>This project concerns how people talked about the #MeToo movement across different social media platforms and investigates how different discourses spread across Twitter, YouTube, Instagram, &amp; Facebook.</p>
 </div>
-<div id="project-2" class="section level2">
-<h2>Project #2</h2>
+<div id="project-2-information-diffusion-on-social-media" class="section level2">
+<h2>Project #2 Information diffusion on social media</h2>
+<p><img src="files/hashtags.png" style="width:100%"></p>
+<p>This project examines how different hashtags related to immigration spread between 2012-2020. We take into account the different characteristics of hashtags, the networks of users who spread them, and the linguistic features of tweets associated with the hashtags.</p>
 </div>
-<div id="project-3" class="section level2">
-<h2>Project #3</h2>
+<div id="project-3-accumulation-of-influence-on-social-media" class="section level2">
+<h2>Project #3 Accumulation of influence on social media</h2>
+<p><img src="files/grow-followers-760x400.png" style="width:100%"></p>
+<p>This projects studies how QAnon believers used Twitter and whether they were able to grew their influence on Twitter. Specifically, we investigate the media use and media uptake of Twitter users who declared themselves to be QAnon believers; and we link their Twitter activity to their follower growth. This project is aimed at understanding this community and its growth, as seen on Twitter and news media.</p>
 </div>
 
 
