--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About</title>
+<title>CEM Lab</title>
 
 <script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -262,7 +262,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">CEM Lab</h1>
 
 </div>
 
