--- a/people.html
+++ b/people.html
@@ -271,7 +271,7 @@ $(document).ready(function () {
 <div id="nojin-kwak-co-director" class="section level2">
 <h2>Nojin Kwak (co-director)</h2>
 <p><img src="files/Kwak.png" style="width:30%; border:5px solid"></p>
-<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo. In addition to his appointment in the Department of Communication, he currently serves as vice provost for international education. Kwak’s research centers on the role of communication media in civic and political engagement and has published in peer-reviewed journals, including <em>Communication Research, Journal of Communication</em>, <em>Human Communication Research</em>, <em>Political Communication</em>, <em>Political Research Quarterly</em>, <em>New Media and Society</em>, and <em>Asian Journal of Communication</em>. His recent studies analyze the impact of internet and mobile communication technologies on community involvement, deliberative openness, and political participation. He has received numerous top paper awards at major conferences. Kwak is a co-editor of a book series, Perspectives on Contemporary Korea, published by the University of Michigan Press.</p>
+<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including <em>Communication Research</em>, <em>Journal of Communication</em>, <em>Human Communication Research</em>, <em>New Media and Society</em>, <em>Journal of Computer-Mediated Communication</em>, <em>Political Communication</em>, and <em>Political Research Quarterly</em>, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.</p>
 <p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
 </div>
 <div id="yini-zhang-co-director" class="section level2">
@@ -279,6 +279,11 @@ $(document).ready(function () {
 <p><img src="files/YiniZhang.jpg" style="width:30%; border:5px solid"></p>
 <p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant professor in the Department of Communication at the University at Buffalo. She applies computational methods to the study of networked actors on social media, information flows across traditional and social media, and their implications for journalism and democracy. Her work has been published in journals such as <em>Journal of Communication</em>, <em>Journal of Computer-Mediated Communication</em>, and <em>New Media &amp; Society</em>.</p>
 <p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
+</div>
+<div id="zhiying-yue-research-assistant" class="section level2">
+<h2>Zhiying Yue (research assistant)</h2>
+<p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
+<p>Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She conducts research on social media use and its impact on psychological and physical well-being.</p>
 </div>
 <div id="new-members" class="section level2">
 <h2>New Members</h2>
