--- a/projects.html
+++ b/projects.html
@@ -270,17 +270,37 @@ $(document).ready(function () {
 <div id="project-1-crossplatform-information-flow" class="section level2">
 <h2>Project #1 Crossplatform information flow</h2>
 <p><img src="files/Multi-platform.jpeg" style="width:100%; height: 10%"></p>
-<p>This project concerns how people talked about the #MeToo movement across different social media platforms and investigates how different discourses spread across Twitter, YouTube, Instagram, &amp; Facebook.</p>
+<div id="this-project-concerns-how-people-talked-about-the-metoo-movement-across-different-social-media-platforms-and-investigates-how-different-discourses-spread-across-twitter-youtube-instagram-facebook." class="section level4">
+<h4>This project concerns how people talked about the #MeToo movement across different social media platforms and investigates how different discourses spread across Twitter, YouTube, Instagram, &amp; Facebook.</h4>
 </div>
-<div id="project-2-information-diffusion-on-social-media" class="section level2">
-<h2>Project #2 Information diffusion on social media</h2>
-<p><img src="files/hashtags.png" style="width:100%"></p>
-<p>This project examines how different hashtags related to immigration spread between 2012-2020. We take into account the different characteristics of hashtags, the networks of users who spread them, and the linguistic features of tweets associated with the hashtags.</p>
 </div>
-<div id="project-3-accumulation-of-influence-on-social-media" class="section level2">
-<h2>Project #3 Accumulation of influence on social media</h2>
+<div id="project-2-accumulation-of-influence-on-social-media" class="section level2">
+<h2>Project #2 Accumulation of influence on social media</h2>
 <p><img src="files/grow-followers-760x400.png" style="width:100%"></p>
-<p>This projects studies how QAnon believers used Twitter and whether they were able to grew their influence on Twitter. Specifically, we investigate the media use and media uptake of Twitter users who declared themselves to be QAnon believers; and we link their Twitter activity to their follower growth. This project is aimed at understanding this community and its growth, as seen on Twitter and news media.</p>
+<div id="this-project-studies-how-qanon-believers-used-twitter-and-whether-they-were-able-to-grew-their-influence-on-twitter.-specifically-we-investigate-the-social-media-use-and-news-media-uptake-of-twitter-users-who-declared-themselves-to-be-qanon-believers-and-we-link-their-twitter-activity-to-their-follower-growth.-this-project-is-aimed-at-understanding-this-community-and-its-growth-as-seen-on-twitter-and-news-media." class="section level4">
+<h4>This project studies how QAnon believers used Twitter and whether they were able to grew their influence on Twitter. Specifically, we investigate the social media use and news media uptake of Twitter users who declared themselves to be QAnon believers; and we link their Twitter activity to their follower growth. This project is aimed at understanding this community and its growth, as seen on Twitter and news media.</h4>
+</div>
+</div>
+<div id="project-3-information-diffusion-on-social-media" class="section level2">
+<h2>Project #3 Information diffusion on social media</h2>
+<p><img src="files/hashtags.png" style="width:100%"></p>
+<div id="this-project-examines-how-different-hashtags-related-to-immigration-spread-between-2012-2020.-we-take-into-account-the-different-characteristics-of-hashtags-the-networks-of-users-who-spread-them-and-the-linguistic-features-of-tweets-associated-with-the-hashtags." class="section level4">
+<h4>This project examines how different hashtags related to immigration spread between 2012-2020. We take into account the different characteristics of hashtags, the networks of users who spread them, and the linguistic features of tweets associated with the hashtags.</h4>
+</div>
+</div>
+<div id="project-4-social-media-activism" class="section level2">
+<h2>Project #4 Social media activism</h2>
+<p><img src="files/activism.jpg" style="width:100%"></p>
+<div id="this-project-investigates-the-power-of-blacklivesmatter-metoo-and-stopasianhate-movements-on-twitter-by-focusing-on-the-participants.-we-examine-how-they-participated-in-the-three-movements-and-to-what-extent-they-channeled-their-attention-from-one-movement-to-another." class="section level3">
+<h3>This project investigates the power of #BlackLivesMatter, #MeToo, and #StopAsianHate movements on Twitter by focusing on the participants. We examine how they participated in the three movements and to what extent they channeled their attention from one movement to another.</h3>
+</div>
+</div>
+<div id="project-5-the-2020-us-presidential-election-study" class="section level2">
+<h2>Project #5 The 2020 US presidential election study</h2>
+<p><img src="files/2020_election.jpeg" style="width:100%"></p>
+<div id="by-conducting-a-two-wave-panel-study-we-plan-to-examine-how-traditional-and-social-media-consumption-patterns-influence-peoples-political-beliefs-and-engagement." class="section level4">
+<h4>By conducting a two-wave panel study, we plan to examine how traditional and social media consumption patterns influence people’s political beliefs and engagement.</h4>
+</div>
 </div>
 
 
