--- a/people.html
+++ b/people.html
@@ -283,7 +283,7 @@ $(document).ready(function () {
 <div id="zhiying-yue-research-assistant" class="section level2">
 <h2>Zhiying Yue (research assistant)</h2>
 <p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
-<p>Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She conducts research on social media use and its impact on psychological and physical well-being.</p>
+<p>Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She researches social media use and its impact on psychological and physical well-being.</p>
 </div>
 <div id="new-members" class="section level2">
 <h2>New Members</h2>
