--- a/projects.html
+++ b/projects.html
@@ -275,20 +275,15 @@ $(document).ready(function () {
 <div id="project-2-accumulation-of-influence-on-social-media" class="section level2">
 <h2>Project #2 Accumulation of influence on social media</h2>
 <p><img src="files/grow-followers-760x400.png" style="width:100%"></p>
-<p>This project studies how QAnon believers used Twitter and whether they were able to grow their influence on Twitter. Specifically, we investigate the social media use and news media uptake of Twitter users who declared themselves to be QAnon believers; and we link their Twitter activity to their follower growth. This project is aimed at understanding this community and its growth, as seen on Twitter and news media.</p>
+<p>This project studies how QAnon believers used Twitter and whether they were able to grow their influence on Twitter. Specifically, we investigate the social media use and news media uptake of Twitter users, who claimed to be QAnon believers; and we link their Twitter activity to their follower growth. This project seeks to understand this community and its growth, as seen on Twitter and news media.</p>
 </div>
-<div id="project-3-information-diffusion-on-social-media" class="section level2">
-<h2>Project #3 Information diffusion on social media</h2>
-<p><img src="files/hashtags.png" style="width:100%"></p>
-<p>This project examines how different hashtags related to immigration spread between 2012-2020. We take into account the different characteristics of hashtags, the networks of users who spread them, and the linguistic features of tweets associated with the hashtags.</p>
-</div>
-<div id="project-4-social-media-activism" class="section level2">
-<h2>Project #4 Social media activism</h2>
+<div id="project-3-social-media-activism" class="section level2">
+<h2>Project #3 Social media activism</h2>
 <p><img src="files/activism.jpg" style="width:100%"></p>
 <p>This project investigates the power of #BlackLivesMatter, #MeToo, and #StopAsianHate movements on Twitter by focusing on the participants. We examine how they participated in the three movements and to what extent they channeled their attention from one movement to another.</p>
 </div>
-<div id="project-5-the-2020-us-presidential-election-study" class="section level2">
-<h2>Project #5 The 2020 US presidential election study</h2>
+<div id="project-4-the-2020-us-presidential-election-study" class="section level2">
+<h2>Project #4 The 2020 US presidential election study</h2>
 <p><img src="files/2020_election.jpeg" style="width:100%"></p>
 <p>By conducting a two-wave panel study, we plan to examine how traditional and social media consumption influences people’s political beliefs and engagement.</p>
 </div>
