--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@
 
 
 
-<title>people.knit</title>
+<title>publications.knit</title>
 
 <script src="site_libs/header-attrs-2.9/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -269,36 +269,16 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <!-- --- -->
-<!-- title: "People" -->
+<!-- title: "Publications" -->
 <!-- --- -->
-<div id="nojin-kwak-co-director" class="section level2">
-<h2>Nojin Kwak (co-director)</h2>
-<p><img src="files/Kwak.png" style="width:30%; border:5px solid"></p>
-<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including <em>Communication Research</em>, <em>Journal of Communication</em>, <em>Human Communication Research</em>, <em>New Media and Society</em>, <em>Journal of Computer-Mediated Communication</em>, <em>Political Communication</em>, and <em>Political Research Quarterly</em>, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.</p>
-<p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
-</div>
-<div id="yini-zhang-co-director" class="section level2">
-<h2>Yini Zhang (co-director)</h2>
-<p><img src="files/YiniZhang.jpg" style="width:30%; border:5px solid"></p>
-<p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant professor in the Department of Communication at the University at Buffalo. She applies computational methods to the study of networked actors on social media, information flows across traditional and social media, and their implications for journalism and democracy. Her work has been published in journals such as <em>Journal of Communication</em>, <em>Journal of Computer-Mediated Communication</em>, and <em>New Media &amp; Society</em>.</p>
-<p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
-</div>
-<div id="zhiying-yue-research-assistant" class="section level2">
-<h2>Zhiying Yue (research assistant)</h2>
-<p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
-<p>Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She researches social media use and its impact on psychological and physical well-being.</p>
-</div>
-<div id="rui-wang" class="section level2">
-<h2>Rui Wang</h2>
-<p><img src="files/Rui_Profile.JPG" style="width:30%; border:5px solid"></p>
-<p>Rui Wang is a current Ph.D. student in the Department of Communication at the University of Buffalo, earned her M.A. in Information and Communication Studies at Rutgers University. Her research focuses on media effects and persuasion, combining computational methods with experimental and survey designs. She is particularly interested in how new technology applied to journalism reshapes public perception. She is also interested in the effect of social media discussion on public attitudes and attention on health and politics. She had three-year teaching experience in the School of Journalism and Communication at Anhui Normal University.</p>
-</div>
-<div id="xinxia-dong" class="section level2">
-<h2>Xinxia Dong</h2>
-<p><img src="files/IMG_6408.JPG" style="width:30%; border:5px solid"></p>
-<p>Xinxia Dong (M.A., Renmin University of China) is pursuing her Ph.D. in the Department of Communication at the University at Buffalo. Xinxia’s academic interests lie in risk communication and social media. Her current published work primarily examines the risk information seeking and processing (RISP) model. She is also passionate about exploring emerging media and learning various computational methods.</p>
+<!-- ## PAPERS IN PROGRESS -->
+<!-- Zhang, Y., Yue, Z., Yang, X., Chen, F. & Kwak, N. (under review) How a Peripheral Ideology Becomes Mainstream: Strategic Performance, Audience Response, and Media Amplification in the Case of QAnon Twitter Accounts. -->
+<!-- Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. & Kwak, N. (manuscript in preparation) “The personal is political”: A cross-platform approach to how networked acknowledgment before and after #MeToo transforms into politicization -->
+<div id="conference-papers" class="section level2">
+<h2>CONFERENCE PAPERS</h2>
+<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (2022). Strategic Performance, Audience Feedback, and Media Amplification: An Analysis of the Behaviors and Influence of QAnon Twitter Accounts. Paper accepted for the 2022 Annual Conference of ICA.</p>
+<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. &amp; Kwak, N. (2022). “The personal is political”: A cross-platform approach to how networked acknowledgment before and after #MeToo transforms into politicization. Paper accepted for the 2022 Annual Conference of ICA.</p>
 </div>
 
 
