--- a/people.html
+++ b/people.html
@@ -273,20 +273,26 @@ $(document).ready(function () {
 <!-- --- -->
 <!-- title: "People" -->
 <!-- --- -->
-<div id="nojin-kwak-co-director" class="section level2">
-<h2>Nojin Kwak (co-director)</h2>
-<p><img src="files/Kwak.png" style="width:30%; border:5px solid"></p>
-<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including <em>Communication Research</em>, <em>Journal of Communication</em>, <em>Human Communication Research</em>, <em>New Media and Society</em>, <em>Journal of Computer-Mediated Communication</em>, <em>Political Communication</em>, and <em>Political Research Quarterly</em>, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.</p>
-<p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
-</div>
 <div id="yini-zhang-co-director" class="section level2">
 <h2>Yini Zhang (co-director)</h2>
 <p><img src="files/YiniZhang.jpg" style="width:30%; border:5px solid"></p>
 <p>Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant professor in the Department of Communication at the University at Buffalo. She applies computational methods to the study of networked actors on social media, information flows across traditional and social media, and their implications for journalism and democracy. Her work has been published in journals such as <em>Journal of Communication</em>, <em>Journal of Computer-Mediated Communication</em>, and <em>New Media &amp; Society</em>.</p>
 <p>contact: <a href="yzhang20@buffalo.edu">yzhang20@buffalo.edu</a></p>
 </div>
-<div id="zhiying-yue-research-assistant" class="section level2">
-<h2>Zhiying Yue (research assistant)</h2>
+<div id="jiyoun-suk-co-director" class="section level2">
+<h2>Jiyoun Suk (co-director)</h2>
+<p><img src="files/Jiyoun.jpeg" style="width:30%; border:5px solid"></p>
+<p>Jiyoun Suk (Ph.D., University of Wisconsin-Madison) is an Assistant Professor in the Department of Communication at the University of Connecticut. In her research, she looks at how the communication processes in the contemporary media environment shape social trust, activism, and political polarization, primarily employing computational methods. In particular, she is interested in how people understand different social groups marginalized communities. Her primary line of research examines the role of networked communications in bringing out voices of social justice and equality, as in the case of the #MeToo movement. She currently looks at how digital activism is contextualized across specific geographies and social media platforms.</p>
+<p>contact: <a href="jiyoun.suk@uconn.edu">jiyoun.suk@uconn.edu</a></p>
+</div>
+<div id="nojin-kwak-co-director" class="section level2">
+<h2>Nojin Kwak (co-director)</h2>
+<p><img src="files/Kwak.png" style="width:30%; border:5px solid"></p>
+<p>Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including <em>Communication Research</em>, <em>Journal of Communication</em>, <em>Human Communication Research</em>, <em>New Media and Society</em>, <em>Journal of Computer-Mediated Communication</em>, <em>Political Communication</em>, and <em>Political Research Quarterly</em>, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.</p>
+<p>contact: <a href="njkwak@buffalo.edu">njkwak@buffalo.edu</a></p>
+</div>
+<div id="zhiying-yue" class="section level2">
+<h2>Zhiying Yue</h2>
 <p><img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid"></p>
 <p>Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She researches social media use and its impact on psychological and physical well-being.</p>
 </div>
