--- a/publications.html
+++ b/publications.html
@@ -272,9 +272,11 @@ $(document).ready(function () {
 <!-- --- -->
 <!-- title: "Publications" -->
 <!-- --- -->
-<!-- ## PAPERS IN PROGRESS -->
-<!-- Zhang, Y., Yue, Z., Yang, X., Chen, F. & Kwak, N. (under review) How a Peripheral Ideology Becomes Mainstream: Strategic Performance, Audience Response, and Media Amplification in the Case of QAnon Twitter Accounts. -->
-<!-- Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. & Kwak, N. (manuscript in preparation) “The personal is political”: A cross-platform approach to how networked acknowledgment before and after #MeToo transforms into politicization -->
+<div id="under-review" class="section level2">
+<h2>UNDER REVIEW</h2>
+<p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (under review) How a Peripheral Ideology Becomes Prominent: Strategic Performance, Audience Reaction, and Media Amplification in the Case of QAnon Twitter Accounts.</p>
+<p>Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. &amp; Kwak, N. (under reviewn) When the Personal Becomes Political: Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses across Four Social Media Platforms.</p>
+</div>
 <div id="conference-papers" class="section level2">
 <h2>CONFERENCE PAPERS</h2>
 <p>Zhang, Y., Yue, Z., Yang, X., Chen, F. &amp; Kwak, N. (2022). Strategic Performance, Audience Feedback, and Media Amplification: An Analysis of the Behaviors and Influence of QAnon Twitter Accounts. Paper accepted for the 2022 Annual Conference of ICA.</p>
