--- a/projects.html
+++ b/projects.html
@@ -284,6 +284,11 @@ $(document).ready(function () {
 <p><img src="files/data%20collection.jpeg" style="width:100%; height: 1%"></p>
 <p>For research on social media discourses, the keywords used to retrieve related social data content can greatly influence the findings. This project examines existing keyword selection practices in social media data collection and proposes a word-graph based snowball sampling approach for keyword selection.</p>
 </div>
+<div id="the-politicization-and-polarization-of-the-metoo-movement" class="section level3">
+<h3>The politicization and polarization of the #MeToo movement</h3>
+<p><img src="files/metoo.jpeg" style="width:100%"></p>
+<p>This project examines the composition of participants in the #MeToo movement and the discourses originating from them over time on Twitter. We seek to find whether the politically motivated participants crowded out moderates and used this movement as weapons in partisan arguments.</p>
+</div>
 <div id="the-2020-us-presidential-election-study" class="section level3">
 <h3>The 2020 US presidential election study</h3>
 <p><img src="files/2020_election.jpeg" style="width:100%"></p>
@@ -294,13 +299,11 @@ $(document).ready(function () {
 <h2>Completed:</h2>
 <div id="accumulation-of-influence-on-social-media" class="section level3">
 <h3>Accumulation of influence on social media</h3>
-<p><img src="files/grow-followers-760x400.png" style="width:100%"></p>
 <p>Though the use of social media by peripheral groups in society has received rising scholarly attention, it remains unclear how social media might contribute to their increased influence and how their social media activity evolves over time. In this project, we study actors’ strategic performance on social media, social media audience’s reaction, and news media amplification of their strategic performance, all of which might fuel each other to catapult peripheral actors to prominence.</p>
 <p>Through an analysis of 242 QAnon Twitter accounts using topic modeling and time series modeling, we find that QAnon accounts performed their group identity that helped them attract social media audience reaction, which in turn reinforced their group identity-based performance and drove news media amplification. These results highlight the implications of social media and news media for the normalization of peripheral actors and ideologies.</p>
 </div>
 <div id="metoo-cross-platform-discourses" class="section level3">
 <h3>#MeToo cross-platform discourses</h3>
-<p><img src="files/activism.jpg" style="width:100%"></p>
 <p>This project situates our analysis in discourses on sexual violence and gender justice activism on Twitter, Facebook, Instagram, and Reddit. We propose a three-pronged framework to understand discourses surrounding social media activism initiated by networked counterpublics: personal expression that raises public consciousness and fosters social support, calls to action that demand social changes, and contention that can either invigorate or stymie action. We use supervised machine learning to classify three discourses (networked acknowledgement, calls to action, and feminism contention) and apply time series analysis to model their interrelations.</p>
 <p>Results show that networked acknowledgment stimulates both calls to action and feminism contention and that calls to action predicts feminism contention across all platforms. Also, these discourses were more sensitive to various events on Twitter and Facebook, but more ephemeral and cyclical on Instagram and more persistent and mutually reinforcing on Reddit. These findings underscore the opportunities and challenges in social media activism and articulate cross-platform similarities and differences.</p>
 </div>
